--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+ 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
         run: ./gradlew assembleDebug
